Fix sticky menu issue on small screens

--- a/envergo/static/sass/project.scss
+++ b/envergo/static/sass/project.scss
@@ -936,8 +936,10 @@ div.hero-alt {
   &.header-popup {
     display: none;
 
-    &.displayed {
-      display: block;
+    @media (min-width: $breakpoint-md) {
+      &.displayed {
+        display: block;
+      }
     }
   }
 }
